--- a/public_html/asset/css/style.css
+++ b/public_html/asset/css/style.css
@@ -3487,7 +3487,7 @@ body.tour-open .animated {
 }
 body {
   font-family: "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #2f4050;
+  /*background-color: #2f4050;*/
   font-size: 13px;
   color: #676a6c;
   overflow-x: hidden;
@@ -8569,4 +8569,34 @@ body.md-skin {
   #page-wrapper {
     margin: 0;
   }
+}
+
+.btn-xs,
+.btn-group-xs > .btn {
+  padding: 1px 5px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px;
+}
+
+.article {
+  line-height: 18px;
+  color: #333;
+  text-decoration: none; /* 밑줄 제거 */
+}
+
+.article:hover {
+  line-height: 18px;
+  color: #333;
+  text-decoration: underline; /* 마우스 호버 상태에서 밑줄 생성 */
+}
+
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
+}
+.text-center {
+  text-align: center;
 }
