--- a/public_html/main/css/style.css
+++ b/public_html/main/css/style.css
@@ -8660,3 +8660,77 @@ body.md-skin {
 .ck-editor__editable_inline {
   min-height: 300px;
 }
+
+/* popup style*/
+
+.popup-container {
+  /*display: none;*/
+  position: fixed;
+  top: 0;
+  left: 0;
+  /*width: 100%;*/
+  /*height: 100%;*/
+  /*background: rgba(0, 0, 0, 0.8);*/
+  z-index: 9999;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+  background: white;
+}
+
+.popup-content {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.popup-content img {
+  display: block;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  margin: 0 auto;
+}
+
+.pop-container .popup-btn-group {
+  width: 100%;
+  background: #fff;
+  border-top: 1px solid rgba(0,0,0,0.1);
+  display: table;
+  border-radius: 0 !important;
+}
+.popup-btn-group, .btn-group-vertical {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+
+}
+.pop-container .popup-btn-group .btn {
+  width: 50%;
+  float: none;
+  letter-spacing: 0;
+  color: #000;
+  padding: 8px 0;
+  border: 0;
+  white-space: normal;
+  display: table-cell;
+  font-size: 12px;
+}
+.popup-btn-group>.btn:first-child {
+  margin-left: 0;
+  font-weight: bold;
+}
+.popup-btn-group>.btn, .btn-group-vertical>.btn {
+  position: relative;
+  float: left;
+}
+.pop-container .popup-btn-group .btn+.btn {
+  border-width: 0 0 0 1px;
+  border-style: solid;
+  border-color: rgba(0,0,0,0.1) !important;
+  border-radius: 0;
+  font-weight: normal;
+  margin-left: 0;
+}
